admission/validatingAdmissionPolicies/policies/control-plane-schedulable/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: control-plane-schedulable
  annotations:
    security.kubeapt.io/displayName: 'Control Plane Schedulable'
    security.kubeapt.io/description: Control-plane nodes must carry a NoSchedule/NoExecute taint to prevent workload scheduling.
    security.kubeapt.io/resource: Nodes
    security.kubeapt.io/severity: "10"
    security.kubeapt.io/remediation: "Add NoSchedule/NoExecute taint for control-plane nodes. Fields: spec.taints."
    policies.kolteq.com/validatingAdmissionPolicy: 5464eb3d-1e70-5477-899c-433479f00147
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - nodes
  variables:
  - name: controlPlaneLabel
    expression: |
      has(object.metadata.labels) &&
      (
        "node-role.kubernetes.io/control-plane" in object.metadata.labels ||
        "node-role.kubernetes.io/master" in object.metadata.labels
      )
  validations:
  - expression: |
      !variables.controlPlaneLabel || (
        has(object.spec.taints) &&
        object.spec.taints.exists(t,
          (t.key in ["node-role.kubernetes.io/control-plane","node-role.kubernetes.io/master"]) &&
          (t.effect == "NoSchedule" || t.effect == "NoExecute")
        )
      )
    message: |
      Control-plane nodes must carry a NoSchedule/NoExecute taint to prevent workload scheduling.
